Fix button's alignment

--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -30,7 +30,7 @@
   padding-left:5px;
   padding-bottom: 8px;
 }
-a.nav-link {
+#Header a.nav-link {
   text-align: end;
 }
 @media (max-width: 992px) 
